--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -44,6 +44,7 @@ h1{
   font-weight: bold;
   font-size: 2.5rem;
   line-height: 1.2;
+  text-decoration: underline;
   text-decoration-color: var(--green);
   text-decoration-thickness: 3px}
 h1:before{content: "> "; color: var(--green)}
