--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -35,7 +35,8 @@ p, ul{line-height: 1.4; margin-bottom: 0}
 ul{padding-left: 20px; list-style-type: "> "}
 
 a{color: var(--white); text-decoration-color: var(--light-gray);
-text-decoration-thickness: 2px;}
+text-decoration-thickness: 2px;
+font-weight: bold; font-style: italic;}
 a:hover{color: var(--green);
 text-decoration-color: var(--green)}
 
